--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -61,9 +61,10 @@ body {
 }
 .prose img {
   @apply max-w-full h-auto rounded-lg shadow-md my-6;
-  max-width: 500px;
-  margin-left: auto;
-  margin-right: auto;
+  max-width: 90%;
+  height: auto;
+  display: block;
+  margin: 1rem auto;
 }
 /* Estilização de tabelas renderizadas a partir de Markdown */
 .prose table {
